New demuxer_module.h header: This way should be easier to add demuxers, and fenice should be more modular. In future, each demuxer could be a external .so lib. In this revision the file demuxer.h was wrongly renamed resource.h and so the revision won't compile.

--- a/include/fenice/Makefile.am
+++ b/include/fenice/Makefile.am
@@ -4,6 +4,7 @@ noinst_HEADERS	=	bufferpool.h \
 			command_environment.h \
 			debug.h \
 			demuxer.h \
+			demuxer_module.h \
 			evenloop.h \
 			fnc_log.h \
 			gsm.h \
