Defining media parser interface: added mediaparser_module.h header useful to implement media parser modules.

--- a/include/fenice/Makefile.am
+++ b/include/fenice/Makefile.am
@@ -15,6 +15,7 @@ noinst_HEADERS	=	bufferpool.h \
 			md5.h \
 			mediainfo.h \
 			MediaParser.h \
+			mediaparser_module.h \
 			MediaThread.h \
 			mp3.h \
 			mpeg4es.h \
