fixed a HUGE conceptual C bug in read_c (cache.c) completed mpegaudio. added log_file param in fenice.conf.in template.

--- a/etc/fenice.conf.in
+++ b/etc/fenice.conf.in
@@ -2,4 +2,5 @@
 root=FENICE_AVROOT_DIR_DEFAULT
 port=FENICE_RTSP_PORT_DEFAULT
 max_session=FENICE_MAX_SESSION_DEFAULT
+log_file=FENICE_LOG_FILE_DEFAULT
 
