The road to Resource Descrption cache... new media utils that manage media objects for struct sharing with count of references.

--- a/include/fenice/Makefile.am
+++ b/include/fenice/Makefile.am
@@ -17,6 +17,7 @@ noinst_HEADERS	=	bufferpool.h \
 			MediaParser.h \
 			mediaparser_module.h \
 			mediathread.h \
+			mediautils.h \
 			mp3.h \
 			mpeg4es.h \
 			mpeg.h \
