--- a/mediathread/Makefile.am
+++ b/mediathread/Makefile.am
@@ -9,6 +9,7 @@ libmediath_la_SOURCES =	cache.c \
 			InputStream.c \
 			MediaParser.c \
 			mediathread.c \
+			mediautils.c \
 			mpeg12.c \
 			mpegaudio.c \
 			mpeg_utils.c
