new sdp2 dir... will replace sdp

--- a/configure.ac
+++ b/configure.ac
@@ -287,6 +287,7 @@ AC_CONFIG_FILES([intnet/Makefile])
 AC_CONFIG_FILES([rtsp/Makefile])
 AC_CONFIG_FILES([mediainfo/Makefile])
 AC_CONFIG_FILES([sdp/Makefile])
+AC_CONFIG_FILES([sdp2/Makefile])
 AC_CONFIG_FILES([src/Makefile])
 AC_CONFIG_FILES([md5/Makefile])
 AC_CONFIG_FILES([socket/Makefile])
