Changed interface to packetize (uint32 *dst_nbytes replaced uint32 dst_nbytes) Added right mpeg12 elementary stream parser (tested with NEuTrino)

--- a/mediathread/Makefile.am
+++ b/mediathread/Makefile.am
@@ -12,8 +12,7 @@ libmediath_la_SOURCES =	cache.c \
 			mediathread.c \
 			mediautils.c \
 			mpeg12.c \
-			mpegaudio.c \
-			mpeg_utils.c
+			mpegaudio.c 
 			
 			
 libmediath_la_LDFLAGS = -static
