sdp2 o= parameter completed.

--- a/sdp2/Makefile.am
+++ b/sdp2/Makefile.am
@@ -3,7 +3,8 @@ feniceincludedir = $(top_srcdir)/include
 
 noinst_LTLIBRARIES = libsdp2.la
 libsdp2_la_SOURCES =	sdp_get_descr.c \
-						sdp_get_version.c
+						sdp_get_version.c \
+						sdp_session_id.c
 			
 libsdp2_la_LDFLAGS = -static
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
