Conflits resolved before using wsocket

--- a/socket/Makefile.am
+++ b/socket/Makefile.am
@@ -3,7 +3,7 @@ feniceincludedir = $(top_srcdir)/include
 
 noinst_LTLIBRARIES = libsocket.la
 libsocket_la_SOURCES =	get_address.c \
-			sock_ntop_host.c \
+			sock_ntop_host2.c \
 			tcp_accept.c \
 			tcp_close.c \
 			tcp_connect.c \
