--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -64,6 +64,7 @@ fenice_LDADD =	$(top_srcdir)/eventloop/libeventloop.la \
 		$(top_srcdir)/xmlparser/libxmlparser.la \
 		$(top_srcdir)/multicast/libmulticast.la \
 		$(top_srcdir)/socket/libsocket.la \
+		$(top_srcdir)/wsocket/libwsocket.la \
 		$(top_srcdir)/command_environment/libcommand.la \
 		$(top_srcdir)/src/libprefs.la \
 		$(top_srcdir)/src/libutils.la \
