Added safe-ctype from wget Multicast support with NeTEmbryo Library TODO:	- clean up old socket 	- add multicast port on SD description

--- a/include/fenice/Makefile.am
+++ b/include/fenice/Makefile.am
@@ -30,6 +30,7 @@ noinst_HEADERS	=	bufferpool.h \
 			rtp.h \
 			rtpptdefs.h \
 			rtsp.h \
+			safe-ctype.h \
 			schedule.h \
 			sdp_grammar.h \
 			sdp.h \
