- stun: dir containes the attributes (Fenice/NeMeSI) - stunserver: dir containes server message. In this first release only 		binding_response and binding_error response are 		implemented. (Fenice) - include/stun: header files for stun (Fenice/NeMeSI)

--- a/configure.ac
+++ b/configure.ac
@@ -368,6 +368,7 @@ AC_CONFIG_FILES([rtp/Makefile])
 AC_CONFIG_FILES([rtcp/Makefile])
 AC_CONFIG_FILES([intnet/Makefile])
 AC_CONFIG_FILES([rtsp/Makefile])
+AC_CONFIG_FILES([stun/Makefile])
 AC_CONFIG_FILES([stunserver/Makefile])
 AC_CONFIG_FILES([mediainfo/Makefile])
 AC_CONFIG_FILES([sdp/Makefile])
