Resumed stun module

--- a/include/stun/Makefile.am
+++ b/include/stun/Makefile.am
@@ -1,5 +1,6 @@
 OMSstunincludedir =	$(includedir)/stun
 
-noinst_HEADERS	=	stun.h
+noinst_HEADERS	=	stun.h \
+			types.h
 
 INCLUDES = $(top_srcdir)
