StunServer works with 2 attributes: MAPPED-ADDRESS and SOURCE-ADDRESS

--- a/stunserver/Makefile.am
+++ b/stunserver/Makefile.am
@@ -4,6 +4,9 @@ feniceincludedir = $(top_srcdir)/include
 noinst_LTLIBRARIES = libstunserver.la
 libstunserver_la_SOURCES =	binding_error_response.c \
 				binding_response.c \
+				response.c \
+				get_local_s_addr.c \
+				get_remote_s_addr.c \
 				OMSstunserverActions.c \
 				OMSstunserverInit.c 
 			
