Getting startes stunserver. Only Source Address and Mapped Address was finished but if you want to try it you must --enable-stun and add a line like stuncfg=192.168.1.87,3478,192.168.1.88,3479  in the fenice.conf file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,10 +10,15 @@ SUBDIRS =	bufferpool \
 		rtp \
 		rtcp \
 		intnet \
-		rtsp \
-		stunserver \
-		stun \
-		mediainfo \
+		rtsp 
+
+if FENICE_STUN
+SUBDIRS +=	stunserver \
+		stun 
+
+endif
+
+SUBDIRS +=	mediainfo \
 		sdp \
 		sdp2 \
 		schedule \
