eventloop breakage, to be ported to the new netembryo

--- a/eventloop/Makefile.am
+++ b/eventloop/Makefile.am
@@ -5,6 +5,7 @@ noinst_LTLIBRARIES = libeventloop.la
 libeventloop_la_SOURCES =	eventloop.c \
 				schedule_connections.c \
 				add_client.c \
+				rtsp_set_fdsets.c \
 				rtsp_server.c
 			
 libeventloop_la_LDFLAGS = -static
