Fenice now compiles with netembryo. Still broken (Deadlocks) TODO: Fix multicast.

--- a/bufferpool/Makefile
+++ b/bufferpool/Makefile
@@ -22,7 +22,7 @@ pkglibdir = $(libdir)/fenice
 pkgincludedir = $(includedir)/fenice
 top_builddir = ..
 am__cd = CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
-INSTALL = /bin/install -c
+INSTALL = /usr/bin/install -c
 install_sh_DATA = $(install_sh) -c -m 644
 install_sh_PROGRAM = $(install_sh) -c
 install_sh_SCRIPT = $(install_sh) -c
@@ -34,9 +34,9 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = powerpc-unknown-linux-gnu
-host_triplet = powerpc-unknown-linux-gnu
-target_triplet = powerpc-unknown-linux-gnu
+build_triplet = i686-pc-linux-gnu
+host_triplet = i686-pc-linux-gnu
+target_triplet = i686-pc-linux-gnu
 subdir = bufferpool
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -73,24 +73,24 @@ DIST_SOURCES = $(libbufferpool_la_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /usr/src/fenice-ng/config/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /home/dario/oms/fenice-ng/config/missing --run aclocal-1.9
 ALLOCA = 
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /usr/src/fenice-ng/config/missing --run tar
+AMTAR = ${SHELL} /home/dario/oms/fenice-ng/config/missing --run tar
 AR = ar
-ARCH_DEFINES = 
+ARCH_DEFINES = -DI386_ASSEM
 ARCH_PPC_FALSE = 
 ARCH_PPC_TRUE = #
-ARCH_X86_FALSE = 
-ARCH_X86_TRUE = #
-AUTOCONF = ${SHELL} /usr/src/fenice-ng/config/missing --run autoconf
-AUTOHEADER = ${SHELL} /usr/src/fenice-ng/config/missing --run autoheader
-AUTOMAKE = ${SHELL} /usr/src/fenice-ng/config/missing --run automake-1.9
+ARCH_X86_FALSE = #
+ARCH_X86_TRUE = 
+AUTOCONF = ${SHELL} /home/dario/oms/fenice-ng/config/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/dario/oms/fenice-ng/config/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/dario/oms/fenice-ng/config/missing --run automake-1.9
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g -O2 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include   -I/usr/include/ffmpeg   -O2
+CFLAGS = -g -O2 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include   -I/usr/include/ffmpeg   -g -ggdb -W -Wall -O2 -march=i386
 CPP = gcc -E
 CPPFLAGS = 
 CXXCPP = 
@@ -101,10 +101,10 @@ ECHO = echo
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
-EGREP = /bin/grep -E
+EGREP = grep -E
 EXEEXT = 
-FENICE_DEBUG_FALSE = 
-FENICE_DEBUG_TRUE = #
+FENICE_DEBUG_FALSE = #
+FENICE_DEBUG_TRUE = 
 FENICE_DUMP_FALSE = 
 FENICE_DUMP_TRUE = #
 FENICE_EFENCE_FALSE = 
@@ -118,7 +118,6 @@ GLIB_GENMARSHAL = glib-genmarshal
 GLIB_LIBS = -lglib-2.0  
 GLIB_MKENUMS = glib-mkenums
 GOBJECT_QUERY = gobject-query
-GREP = /bin/grep
 HAVE_SOLARIS_FALSE = 
 HAVE_SOLARIS_TRUE = #
 HAVE_SSL_FALSE = 
@@ -129,14 +128,14 @@ INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
 LDFLAGS = 
 LIBAVFORMAT_CFLAGS = -I/usr/include/ffmpeg  
-LIBAVFORMAT_LIBS = -lavformat -lavcodec -lz -ldts -lmp3lame -lxvidcore -lx264 -ldc1394_control -lfaac -lfaad -ldl -lraw1394 -lvorbisenc -lavutil -lvorbis -lm -logg  
+LIBAVFORMAT_LIBS = -lavformat -lavcodec -lavutil  
 LIBOBJS = 
-LIBS = -lm -lpthread  -lavformat -lavcodec -lz -ldts -lmp3lame -lxvidcore -lx264 -ldc1394_control -lfaac -lfaad -ldl -lraw1394 -lvorbisenc -lavutil -lvorbis -lm -logg  
+LIBS = -lm -lpthread  -lavformat -lavcodec -lavutil  
 LIBTOOL = $(SHELL) $(top_builddir)/libtool --silent
 LIBTOOL_DEPS = config/ltmain.sh
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /usr/src/fenice-ng/config/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/dario/oms/fenice-ng/config/missing --run makeinfo
 OBJEXT = o
 PACKAGE = fenice
 PACKAGE_BUGREPORT = 
@@ -153,8 +152,12 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = strip
 VERSION = 1.10
+ac_ct_AR = ar
 ac_ct_CC = gcc
+ac_ct_RANLIB = ranlib
+ac_ct_STRIP = strip
 ac_prefix_program = 
+ac_pt_PKG_CONFIG = 
 am__fastdepCC_FALSE = #
 am__fastdepCC_TRUE = 
 am__include = include
@@ -163,53 +166,46 @@ am__quote =
 am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 bindir = ${exec_prefix}/bin
-build = powerpc-unknown-linux-gnu
+build = i686-pc-linux-gnu
 build_alias = 
-build_cpu = powerpc
+build_cpu = i686
 build_os = linux-gnu
-build_vendor = unknown
-datadir = ${datarootdir}
-datarootdir = ${prefix}/share
-docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
-dvidir = ${docdir}
-exec_prefix = /usr
-fenice_avroot_dir = /var/fenice/avroot
+build_vendor = pc
+datadir = ${prefix}/share
+exec_prefix = /usr/local
+fenice_avroot_dir = /srv/fenice/avroot
 fenice_cert = /var/local/lib/fenice/certs/cert.pem
 fenice_conf_dir = /etc
 fenice_conf_file = fenice.conf
-fenice_docs_dir = ${datarootdir}/doc/fenice
+fenice_docs_dir = ${prefix}/share/doc/fenice
 fenice_log_file = /var/log/fenice.log
 fenice_max_session = 100
 fenice_rtsp_port = 554
 fenice_state_dir = /var/local/lib/fenice/certs
-host = powerpc-unknown-linux-gnu
+host = i686-pc-linux-gnu
 host_alias = 
-host_cpu = powerpc
+host_cpu = i686
 host_os = linux-gnu
-host_vendor = unknown
-htmldir = ${docdir}
+host_vendor = pc
 includedir = ${prefix}/include
-infodir = ${datarootdir}/info
-install_sh = /usr/src/fenice-ng/config/install-sh
+infodir = ${prefix}/info
+install_sh = /home/dario/oms/fenice-ng/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
-localedir = ${datarootdir}/locale
 localstatedir = /var
-mandir = ${datarootdir}/man
+mandir = /usr/local/share/man
 mkdir_p = mkdir -p --
 oldincludedir = /usr/include
-pdfdir = ${docdir}
-prefix = /usr
+prefix = /usr/local
 program_transform_name = s,x,x,
-psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 sysconfdir = /etc
-target = powerpc-unknown-linux-gnu
+target = i686-pc-linux-gnu
 target_alias = 
-target_cpu = powerpc
+target_cpu = i686
 target_os = linux-gnu
-target_vendor = unknown
+target_vendor = pc
 feniceincludedir = $(top_srcdir)/include
 noinst_LTLIBRARIES = libbufferpool.la
 libbufferpool_la_SOURCES = fnc_ipc_name.c \
